@@ -1,13 +1,13 @@
 package cn.com.frodo.knowledge.encrypt;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+
 
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
 import java.security.SecureRandom;
+import java.util.Base64;
 
 /**
  * Created by frodoking on 2017/5/18.
@@ -33,7 +33,7 @@ public class AESUtil {
             cipher.init(Cipher.ENCRYPT_MODE, key);
             byte[] byte_encode = content.getBytes("utf-8");
             byte[] byte_AES = cipher.doFinal(byte_encode);
-            String AES_encode = new String(new BASE64Encoder().encode(byte_AES));
+            String AES_encode = new String(Base64.getEncoder().encode(byte_AES));
             return AES_encode;
         } catch (Exception e) {
             e.printStackTrace();
@@ -59,7 +59,7 @@ public class AESUtil {
             SecretKey key = new SecretKeySpec(raw, "AES");
             Cipher cipher = Cipher.getInstance("AES");
             cipher.init(Cipher.DECRYPT_MODE, key);
-            byte[] byte_content = new BASE64Decoder().decodeBuffer(content);
+            byte[] byte_content = Base64.getDecoder().decode(content);
             byte[] byte_decode = cipher.doFinal(byte_content);
             return new String(byte_decode, "utf-8");
         } catch (Exception e) {
